# kitchen-management-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  simulation
kitser/: InputReader.cpp  InputReader.hpp  utility.hpp
src/: simulator.cpp
